webcompat/static/css/development/components/labels.css
/*----------add/remove labels----------*/

/* Wrapper label editor */
.label_editor__wrapper {
  position:relative;
  display:inline-block;
}
@media (--viewport-375px) {
  .label_editor__wrapper {
    position:static; /* position of label_editor not depend of this class */
  }
}

/* Label editor */
.label_editor
{
  display:none;
  z-index:2;
  position: absolute;
  white-space:nowrap;
  font-size:var(--base-font-size);
  top: 100%;
  left: 0;
  /* caret */
  margin-left: -11px;
  margin-top: 18px;
  box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.25);
  border-radius: 6px;
  background:  #fff;
}
@media (--viewport-375px) {
  .label_editor {
    position:fixed;
    width:100%;
    height:100%;
    top:0;
    left:0;
    transform:none;
    margin:0;
    overflow-y:auto;
    overflow-x:hidden;
  }
  .label_editor_table {
    display:table;
    width:100%;
  }
  .label_editor_row {
    display:table-row;
    width:100%;
  }

}
/* Caret */
.label_editor:after {
  display: none;
  position: absolute;
  content: "";
  width: 1.125em;
  height: 1.125em;
  top: -0.625em;
  left: 1.06em;
  background-color: #ffffff;
  box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.25);
  transform: rotate(45deg);
  z-index: -1;
}
@media (--viewport-375px) {
  .label_editor:after {
    display:none;
  }
}
/* Label header */
.label_editor__header {
  background-color:#fff;
  border-radius: 6px 6px 0px 0px;
  box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.1), 0px 2px 3px rgba(0, 0, 0, 0.05);
  padding: 0.625em;
}
.label_editor__search {
  display:inline-block;
  width:auto;
}
/* btn */
.label_editor__btn {
  border:none;
}
/* hover btn */
.label_editor__btn:hover {
  text-decoration:underline;
}
/* list label */
.label_list {
  background-color: #FFF;
  color: #333;
  max-height:18.75em;
  overflow-x: hidden;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
}
@media (--viewport-375px) {
  .label_list {
     max-height:inherit;
  }
}
/* item label */
.label_item {
  display:block;
  float:none;
  cursor:pointer;
  border-top: 1px solid #ddd;
  margin:0;
  font-size:1em;
}
.label_item:last-child {
    border-bottom:1px solid #ddd;
}
.label_color {
  display: inline-block;
  margin: .5em .3125em .5em .3125em;
  width: 1.5em;
  height: 1.5em;
  line-height: 1.25em;
  text-align: center;
  border-radius: 3px;
}
.label_checkbox {
  margin:0;
  padding:0;
}
.label_name {
  display:inline-block;
  font-size: .75em;
  font-weight: 500;
  margin: .67em 4.33em .67em 0;
  line-height: .1.25em;
}

